--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background=""/>
+        android:background="@color/colorPrimaryDark"/>
 
     <TextView
         android:id="@+id/textView2"
